--- a/org.muml.uppaal.adapter.extension.edit.properties/plugin.xml
+++ b/org.muml.uppaal.adapter.extension.edit.properties/plugin.xml
@@ -33,23 +33,23 @@
     <propertyEditors>
     
        <propertyEditor
-             factory="org.muml.uppaal.adapter.extension.verificationextension.properties.verificationExtension.editor.CommittedExtensionEditor$Factory"
-             type="http://www.fujaba.de/muml/verification/extension/0.4.0#CommittedExtension">
+             factory="org.muml.uppaal.adapter.extension.properties.verificationextension.editor.CommittedExtensionEditor$Factory"
+             type="http://www.muml.org/uppaal/adapter/extension/verificationextension/1.0.0#CommittedExtension">
        </propertyEditor>
     
        <propertyEditor
-             factory="org.muml.uppaal.adapter.extension.verificationextension.properties.verificationExtension.editor.ClockBindingEditor$Factory"
-             type="http://www.fujaba.de/muml/verification/extension/0.4.0#ClockBinding">
+             factory="org.muml.uppaal.adapter.extension.properties.verificationextension.editor.ClockBindingEditor$Factory"
+             type="http://www.muml.org/uppaal/adapter/extension/verificationextension/1.0.0#ClockBinding">
        </propertyEditor>
     
        <propertyEditor
-             factory="org.muml.uppaal.adapter.extension.verificationextension.properties.verificationExtension.editor.ElementToVerifyExtensionEditor$Factory"
-             type="http://www.fujaba.de/muml/verification/extension/0.4.0#ElementToVerifyExtension">
+             factory="org.muml.uppaal.adapter.extension.properties.verificationextension.editor.ElementToVerifyExtensionEditor$Factory"
+             type="http://www.muml.org/uppaal/adapter/extension/verificationextension/1.0.0#ElementToVerifyExtension">
        </propertyEditor>
     
        <propertyEditor
-             factory="org.muml.uppaal.adapter.extension.verificationextension.properties.verificationExtension.editor.ClockBindingsExtensionEditor$Factory"
-             type="http://www.fujaba.de/muml/verification/extension/0.4.0#ClockBindingsExtension">
+             factory="org.muml.uppaal.adapter.extension.properties.verificationextension.editor.ClockBindingsExtensionEditor$Factory"
+             type="http://www.muml.org/uppaal/adapter/extension/verificationextension/1.0.0#ClockBindingsExtension">
        </propertyEditor>
     
     </propertyEditors>
@@ -59,7 +59,7 @@
  <extension
        point="org.muml.ape.runtime.metamodelContributor">
     <metamodel
-          contributor="org.muml.uppaal.adapter.extension.verificationextension.properties.metamodel.MetamodelContributor">
+          contributor="org.muml.uppaal.adapter.extension.properties.metamodel.MetamodelContributor">
     </metamodel>
  </extension>
 
@@ -67,7 +67,7 @@
  <extension
        point="org.muml.ape.runtime.creationConstraintContributor">
     <constraint
-          contributor="org.muml.uppaal.adapter.extension.verificationextension.properties.constraint.CreationConstraintContributor">
+          contributor="org.muml.uppaal.adapter.extension.properties.constraint.CreationConstraintContributor">
     </constraint>
  </extension>
 
