--- a/org.muml.uppaal.adapter.mtctl.edit.properties/plugin.xml
+++ b/org.muml.uppaal.adapter.mtctl.edit.properties/plugin.xml
@@ -59,202 +59,202 @@
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.BooleanLogic.editor.AndExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/BooleanLogic#AndExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/booleanlogic/1.0.0#AndExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.BooleanLogic.editor.ImplyExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/BooleanLogic#ImplyExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/booleanlogic/1.0.0#ImplyExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.BooleanLogic.editor.NotExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/BooleanLogic#NotExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/booleanlogic/1.0.0#NotExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.BooleanLogic.editor.OrExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/BooleanLogic#OrExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/booleanlogic/1.0.0#OrExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Predicates.editor.DeadlockExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Predicates#DeadlockExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/predicates/1.0.0#DeadlockExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Predicates.editor.ComparisonExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Predicates#ComparisonExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/predicates/1.0.0#ComparisonExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Predicates.editor.MessageInBufferExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Predicates#MessageInBufferExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/predicates/1.0.0#MessageInBufferExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Predicates.editor.MessageInTransitExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Predicates#MessageInTransitExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/predicates/1.0.0#MessageInTransitExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Predicates.editor.StateActiveExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Predicates#StateActiveExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/predicates/1.0.0#StateActiveExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Predicates.editor.SubstateOfExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Predicates#SubstateOfExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/predicates/1.0.0#SubstateOfExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Predicates.editor.TransitionFiringExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Predicates#TransitionFiringExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/predicates/1.0.0#TransitionFiringExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Predicates.editor.PredicateExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Predicates#PredicateExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/predicates/1.0.0#PredicateExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Predicates.editor.TrueExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Predicates#TrueExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/predicates/1.0.0#TrueExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Predicates.editor.FalseExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Predicates#FalseExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/predicates/1.0.0#FalseExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Predicates.editor.StateInStatechartExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Predicates#StateInStatechartExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/predicates/1.0.0#StateInStatechartExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Predicates.editor.ConnectorOverflowExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Predicates#ConnectorOverflowExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/predicates/1.0.0#ConnectorOverflowExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Predicates.editor.MessageDiscardedExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Predicates#MessageDiscardedExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/predicates/1.0.0#MessageDiscardedExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Quantifiers.editor.AFExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Quantifiers#AFExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/quantifiers/1.0.0#AFExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Quantifiers.editor.AGExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Quantifiers#AGExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/quantifiers/1.0.0#AGExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Quantifiers.editor.EFExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Quantifiers#EFExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/quantifiers/1.0.0#EFExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Quantifiers.editor.EGExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Quantifiers#EGExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/quantifiers/1.0.0#EGExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Quantifiers.editor.ExistenceQuantExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Quantifiers#ExistenceQuantExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/quantifiers/1.0.0#ExistenceQuantExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Quantifiers.editor.BoundVariableEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Quantifiers#BoundVariable">
+             type="http://www.muml.org/uppaal/adapter/mtctl/quantifiers/1.0.0#BoundVariable">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Quantifiers.editor.UniversalQuantExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Quantifiers#UniversalQuantExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/quantifiers/1.0.0#UniversalQuantExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Quantifiers.editor.LeadsToExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Quantifiers#LeadsToExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/quantifiers/1.0.0#LeadsToExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.mtctl.editor.PropertyRepositoryEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl#PropertyRepository">
+             type="http://www.muml.org/uppaal/adapter/mtctl/1.0.0#PropertyRepository">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.mtctl.editor.PropertyEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl#Property">
+             type="http://www.muml.org/uppaal/adapter/mtctl/1.0.0#Property">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Comparables.editor.BufferMsgCountExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Comparables#BufferMsgCountExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/comparables/1.0.0#BufferMsgCountExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Comparables.editor.ConstExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Comparables#ConstExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/comparables/1.0.0#ConstExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Comparables.editor.MumlElemExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Comparables#MumlElemExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/comparables/1.0.0#MumlElemExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Comparables.editor.SourceStateExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Comparables#SourceStateExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/comparables/1.0.0#SourceStateExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Comparables.editor.TargetStateExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Comparables#TargetStateExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/comparables/1.0.0#TargetStateExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Sets.editor.ClockSetExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Sets#ClockSetExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/sets/1.0.0#ClockSetExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Sets.editor.IntervalSetExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Sets#IntervalSetExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/sets/1.0.0#IntervalSetExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Sets.editor.MessageSetExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Sets#MessageSetExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/sets/1.0.0#MessageSetExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Sets.editor.StateSetExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Sets#StateSetExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/sets/1.0.0#StateSetExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Sets.editor.TransitionSetExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Sets#TransitionSetExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/sets/1.0.0#TransitionSetExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Sets.editor.BufferSetExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Sets#BufferSetExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/sets/1.0.0#BufferSetExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Sets.editor.InstanceSetExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Sets#InstanceSetExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/sets/1.0.0#InstanceSetExpr">
        </propertyEditor>
     
        <propertyEditor
              factory="org.muml.uppaal.adapter.mtctl.properties.Sets.editor.SubinstanceSetExprEditor$Factory"
-             type="http://www.uni_paderborn.de/fujaba/muml/verification/uppaal/Mtctl/Sets#SubinstanceSetExpr">
+             type="http://www.muml.org/uppaal/adapter/mtctl/sets/1.0.0#SubinstanceSetExpr">
        </propertyEditor>
     
     </propertyEditors>
