[Renaming] [Migration] [Uppaal] Textual replacement of nsURIs from requirements.ecore.

--- a/org.muml.uppaal.adapter.blackbox/plugin.xml
+++ b/org.muml.uppaal.adapter.blackbox/plugin.xml
@@ -8,7 +8,7 @@
       <metamodel nsURI="http://www.muml.org/uppaal/1.0.0"/>       
       <metamodel nsURI="http://www.muml.org/uppaal/trace/1.0.0"/>
       <metamodel
-            nsURI="http://www.uni-paderborn.de/requirements/0.4.0">
+            nsURI="http://www.muml.org/uppaal/requirements/1.0.0">
       </metamodel>
       <metamodel
             nsURI="http://www.muml.org/uppaal/options/1.0.0">
