--- a/org.muml.uppaal.adapter.ui/plugin.xml
+++ b/org.muml.uppaal.adapter.ui/plugin.xml
@@ -3,36 +3,36 @@
 <plugin>
 
 	<extension point="org.eclipse.ui.commands" id="menu-commands">
-      <category id="de.uni_paderborn.fujaba.muml.coordinationprotocol.diagram.part.CoordinationProtocolDiagramEditorID" name="UPPAAL Verification Command" description="Run UPPAAL model checking"/>
+      <category id="org.muml.pim.coordinationprotocol.diagram.part.CoordinationProtocolDiagramEditorID" name="UPPAAL Verification Command" description="Run UPPAAL model checking"/>
       <command id="de.uni_paderborn.fujaba.muml.verification.uppaal.UppaalVerificationAction"
          name="Run UPPAAL Model Checking"
-         categoryId="de.uni_paderborn.fujaba.muml.coordinationprotocol.diagram.part.CoordinationProtocolDiagramEditorID"
+         categoryId="org.muml.pim.coordinationprotocol.diagram.part.CoordinationProtocolDiagramEditorID"
          defaultHandler="org.muml.uppaal.adapter.ui.UppaalVerifyForResultAction"/>
    </extension>
 
    <extension point="org.eclipse.ui.commands" id="menu-commands">
-      <category id="de.uni_paderborn.fujaba.muml.coordinationprotocol.diagram.part.CoordinationProtocolDiagramEditorID" name="UPPAAL XML Export Command" description="Export UPPAAL XML file"/>
+      <category id="org.muml.pim.coordinationprotocol.diagram.part.CoordinationProtocolDiagramEditorID" name="UPPAAL XML Export Command" description="Export UPPAAL XML file"/>
       <command id="de.uni_paderborn.fujaba.muml.verification.uppaal.ExportUppaalXMLAction"
          name="Export UPPAAL XML File"
-         categoryId="de.uni_paderborn.fujaba.muml.coordinationprotocol.diagram.part.CoordinationProtocolDiagramEditorID"
+         categoryId="org.muml.pim.coordinationprotocol.diagram.part.CoordinationProtocolDiagramEditorID"
          defaultHandler="org.muml.uppaal.adapter.ui.ExportUppaalXMLAction"/>
    </extension>
    
    <extension point="org.eclipse.ui.commands" id="menu-commands">
-      <category id="de.uni_paderborn.fujaba.muml.coordinationprotocol.diagram.part.CoordinationProtocolDiagramEditorID" name="Export UPPAAL Model Command" description="Export UPPAAL model"/>
+      <category id="org.muml.pim.coordinationprotocol.diagram.part.CoordinationProtocolDiagramEditorID" name="Export UPPAAL Model Command" description="Export UPPAAL model"/>
       <command id="de.uni_paderborn.fujaba.muml.verification.uppaal.ExportUppaalModelAction"
          name="Export UPPAAL Model"
-         categoryId="de.uni_paderborn.fujaba.muml.coordinationprotocol.diagram.part.CoordinationProtocolDiagramEditorID"
+         categoryId="org.muml.pim.coordinationprotocol.diagram.part.CoordinationProtocolDiagramEditorID"
          defaultHandler="org.muml.uppaal.adapter.ui.ExportUppaalModelAction"/>
    </extension>
 
 
 
    <extension point="org.eclipse.ui.commands" id="menu-commands">
-      <category id="de.uni_paderborn.fujaba.muml.coordinationprotocol.diagram.part.CoordinationProtocolDiagramEditorID" name="Export UPPAAL Model Command" description="Export UPPAAL model (Wizard)..."/>
+      <category id="org.muml.pim.coordinationprotocol.diagram.part.CoordinationProtocolDiagramEditorID" name="Export UPPAAL Model Command" description="Export UPPAAL model (Wizard)..."/>
       <command id="de.uni_paderborn.fujaba.muml.verification.uppaal.ExportUppaalWizardModelAction"
          name="Export UPPAAL Model (Wizard)..."
-         categoryId="de.uni_paderborn.fujaba.muml.coordinationprotocol.diagram.part.CoordinationProtocolDiagramEditorID"
+         categoryId="org.muml.pim.coordinationprotocol.diagram.part.CoordinationProtocolDiagramEditorID"
          defaultHandler="org.muml.uppaal.adapter.ui.wizard.MUML2ExportUppaalWizardDialogAction"/>
    </extension>
 
@@ -40,18 +40,18 @@
 
 
    <extension point="org.eclipse.ui.commands" id="menu-commands">
-      <category id="de.uni_paderborn.fujaba.muml.coordinationprotocol.diagram.part.CoordinationProtocolDiagramEditorID" name="Trace Image Export Command" description="Export trace image"/>
+      <category id="org.muml.pim.coordinationprotocol.diagram.part.CoordinationProtocolDiagramEditorID" name="Trace Image Export Command" description="Export trace image"/>
       <command id="de.uni_paderborn.fujaba.muml.verification.uppaal.ExportTraceImageAction"
          name="Run UPPAAL Model Checking for a Trace"
-         categoryId="de.uni_paderborn.fujaba.muml.coordinationprotocol.diagram.part.CoordinationProtocolDiagramEditorID"
+         categoryId="org.muml.pim.coordinationprotocol.diagram.part.CoordinationProtocolDiagramEditorID"
          defaultHandler="org.muml.uppaal.adapter.ui.ExportTraceImageAction"/>
    </extension>
    
    <extension point="org.eclipse.ui.commands" id="menu-commands">
-      <category id="de.uni_paderborn.fujaba.muml.coordinationprotocol.diagram.part.CoordinationProtocolDiagramEditorID" name="Add Default Properties Command" description="Add Default Verification Properties"/>
+      <category id="org.muml.pim.coordinationprotocol.diagram.part.CoordinationProtocolDiagramEditorID" name="Add Default Properties Command" description="Add Default Verification Properties"/>
       <command id="de.uni_paderborn.fujaba.muml.verification.uppaal.AddDefaultPropertiesAction"
          name="Add Default Verification Properties"
-         categoryId="de.uni_paderborn.fujaba.muml.coordinationprotocol.diagram.part.CoordinationProtocolDiagramEditorID"
+         categoryId="org.muml.pim.coordinationprotocol.diagram.part.CoordinationProtocolDiagramEditorID"
          defaultHandler="org.muml.uppaal.adapter.ui.AddDefaultPropertiesAction"/>
    </extension>
    
@@ -153,14 +153,14 @@
          <command commandId="de.uni_paderborn.fujaba.muml.verification.uppaal.ExportUppaalWizardModelAction">
             <visibleWhen>
                <and>
-                  <with variable="activePartId"><equals value="de.uni_paderborn.fujaba.muml.coordinationprotocol.diagram.part.CoordinationProtocolDiagramEditorID"/></with>
+                  <with variable="activePartId"><equals value="org.muml.pim.coordinationprotocol.diagram.part.CoordinationProtocolDiagramEditorID"/></with>
                	  
                	  <with variable="selection"><iterate ifEmpty="false">
                	     <or> 
-                        <instanceof value="de.uni_paderborn.fujaba.muml.coordinationprotocol.diagram.edit.parts.CoordinationProtocolEditPart"/>
-                        <instanceof value="de.uni_paderborn.fujaba.muml.coordinationprotocol.diagram.edit.parts.CoordinationProtocol2EditPart"/>
-                        <instanceof value="de.uni_paderborn.fujaba.muml.coordinationprotocol.diagram.edit.parts.CoordinationProtocolCoordinationProtocolContainerCompartmentEditPart"/>
-                        <instanceof value="de.uni_paderborn.fujaba.muml.coordinationprotocol.diagram.edit.parts.CoordinationProtocolNameEditPart"/>
+                        <instanceof value="org.muml.pim.coordinationprotocol.diagram.edit.parts.CoordinationProtocolEditPart"/>
+                        <instanceof value="org.muml.pim.coordinationprotocol.diagram.edit.parts.CoordinationProtocol2EditPart"/>
+                        <instanceof value="org.muml.pim.coordinationprotocol.diagram.edit.parts.CoordinationProtocolCoordinationProtocolContainerCompartmentEditPart"/>
+                        <instanceof value="org.muml.pim.coordinationprotocol.diagram.edit.parts.CoordinationProtocolNameEditPart"/>
                      </or>
                   </iterate></with>    
                </and>              
