--- a/org.muml.uppaal.adapter.ui/plugin.xml
+++ b/org.muml.uppaal.adapter.ui/plugin.xml
@@ -173,7 +173,7 @@
    <extension
          point="org.eclipse.ui.exportWizards">
       <wizard
-            category="de.uni_paderborn.fujaba.export"
+            category="org.muml.core.export"
             class="org.muml.uppaal.adapter.ui.wizard.MUML2UppaalExportWizard"
             id="de.uni_paderborn.fujaba.verification.upaal.export"
             name="MechatronicUML to Uppaal">
